--- a/Users/Users.Api/appsettings.json
+++ b/Users/Users.Api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "host=localhost;username=root;password=1234;database=users;"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:5001",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr",
+    "TokenValidityInMinutes": 1,
+    "RefreshTokenValidityInDays": 7
+  }
 }
