--- a/Users/Users.Dal/Users.Dal.csproj
+++ b/Users/Users.Dal/Users.Dal.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BetterUksivt.Infrastructure\BetterUksivt.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
