--- a/betteruksivt-react/package.json
+++ b/betteruksivt-react/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/react-scroll": "^1.8.10",
     "tailwindcss": "^3.4.0"
   }
